Second update of the year, May 2023, by David J. Nachón García.

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
             <div class="box">
               <h4 class="title"><a href="#News">News</a></h4>
 			  <br>
-              <p align="justify"> <a href="#News">Talk by Anxo Paz at the Iberian Research in Statistical Ecology (IRSE) (30/03/2023)  </a>
+              <p align="justify"> <a href="#News">Working Group for the Bay of Biscay and the Iberian Waters Ecoregion "WGBIE" (3-11/05/2023) </a>
 			   <br>
 			    <br>
-			  <img src="img/new130.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+			  <img src="img/new133.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
 			  </p>
             </div>
           </div>
@@ -647,7 +647,7 @@ further information of group organization and team composition can be found <a h
               <div class="member-info">
                 <div class="member-info-content">
                <h4>J. Otero Villar </h4>
-                  <span>jaime.otero@ieo.csic.es</span>
+                  <span>jotero@iim.csic.es</span>
                   <div class="social">
 				    <a href="https://twitter.com/joteromarecol?lang=es"><i class="fa fa-twitter"></i></a>
                     <a href=" https://scholar.google.es/citations?user=O4y--mUAAAAJ&hl=es"><img src="img/scolar.png" alt="" width="20"></a>
@@ -914,7 +914,7 @@ further information of group organization and team composition can be found <a h
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Nair Vilas Arrondo</h4>
-                  <span>nair.vilas@csic.es</span>
+                  <span>nvilas@iim.csic.es</span>
                   <div class="social">
 					<a href="https://www.researchgate.net/profile/Nair-Arrondo"><img src="img/rg.png" alt="" height="20" width="20"></a>
                   </div>
@@ -1057,6 +1057,43 @@ further information of group organization and team composition can be found <a h
 		
         <ul id="News-list" class="wow fadeInUp">
 
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News133"> Working Group for the Bay of Biscay and the Iberian Waters Ecoregion "WGBIE" (3-11/05/2023) <i class="ion-android-remove"></i></a>
+            <div id="News133" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Multiple members of the group will be in Copenhagen from 3-11 May for the WGBIE. At this meeting a total of 28 scientists from 5 countries:
+			 Portugal, Spain, France, Ireland and UK will discuss the assessment of 24 demersal fish and crustacean stocks. 		 
+            <a href="https://www.ices.dk/community/groups/Pages/WGBIE.aspx"> Go to the ICES page, for more information.</a></p> 			 
+<div align="center"> <img src="img/new133.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News132"> New article "First Maximum Sustainable Yield advice for the Nephrops norvegicus stocks of the Northwest Iberian
+			coast using stochastic Surplus Production model in Continuous Time (SPiCT)" (26/04/2023) <i class="ion-android-remove"></i></a>
+            <div id="News132" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             New article from the IMPRESS and Math4fish projects, 
+			 fantastically led by our colleague Isabel Herraiz, 
+			 on maximum sustainable yield for Norway lobster stocks on the northwest Iberian coast!
+             This study, besides being relevant to the sustainable exploitation of Norway lobster stocks, also provides valuable insight into 
+             the adequacy and limitations of production models for the assessment of crustacean stocks in general. 			 
+            <a href="https://www.frontiersin.org/articles/10.3389/fmars.2023.1062078/full"> Go to the article page, for more information.</a></p> 			 
+<div align="center"> <img src="img/new132.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News131"> 5th Symposium on effects of climatechange on the World's ocean (ECCWO5) (17-21/04/2023) <i class="ion-android-remove"></i></a>
+            <div id="News131" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             The congress will take place from 17-21 April in Bergen, Norway. Our colleague Anxo Paz participates with a panel communication, 
+			 which deals with the R Knobi package, to implement known biomass production models considering environmental effects.			 
+            <a href="https://github.com/MERVEX-group/knobi"> You can check it out in the MERVEX group's github repository.</a></p> 			 
+<div align="center"> <img src="img/new131.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
 						 		<li>
             <a data-toggle="collapse" class="collapsed" href="#News130"> Talk by Anxo Paz at the Iberian Research in Statistical Ecology (IRSE) (30/03/2023)   <i class="ion-android-remove"></i></a>
             <div id="News130" class="collapse" data-parent="#News-list"> <p align="justify"> 
@@ -1187,40 +1224,6 @@ further information of group organization and team composition can be found <a h
             </div>
          </li>
 
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News119"> Special ICES journal issue (21/02/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News119" class="collapse" data-parent="#News-list"> <p align="justify"> 
-			 Two of the members of MERVEX, Santiago Cerviño and Maria Grazia are organizers 
-			 of this special issue of ICES journal 
-			 and encourage you to send your work, you are still in time! 
-            <a href="https://static.primary.prod.gcms.the-infra.com/static/site/icesjms/document/Call+for+papers_Advances+and+challenges+in+the+modelling+and+assessment+of+fishery+resources_Final.pdf?node=f75b6e8c3b7ccfa76961&version=1467759:ebc50897f828fb7803ed"> More information.</a></p> 			 
-<div align="center"> <img src="img/new119.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News118"> Meeting with the fishing sector for the southern hake stock in Vigo (21/02/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News118" class="collapse" data-parent="#News-list"> <p align="justify"> 
-			 Yesterday, part of the Math4Fish team held a meeting with the fishing sector for the southern hake stock in Vigo. 
-			 For us, constructive dialogue is the basis for effective collaboration. 
-            <a href="https://math4fish.ieo.csic.es/"> Go to the Math4Fish web for more information.</a></p> 			 
-<div align="center"> <img src="img/new118.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News117"> Talk by Marta Cousido in Iberian Research in Statistical Ecology (IRSE) (16/02/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News117" class="collapse" data-parent="#News-list"> <p align="justify"> 
-			 Yesterday, our colleague Marta Cousido,
-			 gave a talk on surplus production models at the Iberian Research in Statistical Ecology (IRSE).
-            <a href="https://groups.google.com/g/iberian-research-in-statistical-ecology-irse/c/pZlaYMUODeE"> Go to the IRSE web for more information.</a></p> 			 
-<div align="center"> <img src="img/new117.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
 		 
 		 <li>
 		  
@@ -1309,10 +1312,9 @@ further information of group organization and team composition can be found <a h
 
     <div class="container">
 	        <div style="text-align: center;">
-		<a href="http://www.ciencia.gob.es/portal/site/MICINN/"><img src="img/clients/client-1.png" alt="" height="55px"></a> 
         <a href="http://www.ciencia.gob.es/portal/site/MICINN/aei"><img src="img/clients/client-2.jpg" alt="" height="55px"></a>
 		<a href="https://ec.europa.eu/regional_policy/es/funding/erdf/"><img src="img/clients/client-3.jpg" alt="" height="55px"></a>
-		<a href="https://www.csic.es/es"><img src="img/clients/client-4.png" alt="" height="105px"></a> 
+		<a href="https://www.csic.es/es"><img src="img/clients/client-6.png" alt="" height="55px"></a> 
 		<a href="http://www.ieo.es/es/"><img src="img/clients/client-5.png" alt="" height="55px"></a> 
 		<a href="https://www.xunta.gal/portada"><img src="img/clients/xunta.jpg" alt="" height="45px"></a> 
 		<a href="http://gain.xunta.gal/?locale=es_ES"><img src="img/clients/gain.jpg" alt="" height="45px"></a> 
