--- a/proof/previous news.html
+++ b/proof/previous news.html
@@ -64,6 +64,37 @@
 		
 
 						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News119"> Special ICES journal issue (21/02/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News119" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			 Two of the members of MERVEX, Santiago Cerviño and Maria Grazia are organizers 
+			 of this special issue of ICES journal 
+			 and encourage you to send your work, you are still in time! 
+            <a href="https://static.primary.prod.gcms.the-infra.com/static/site/icesjms/document/Call+for+papers_Advances+and+challenges+in+the+modelling+and+assessment+of+fishery+resources_Final.pdf?node=f75b6e8c3b7ccfa76961&version=1467759:ebc50897f828fb7803ed"> More information.</a></p> 			 
+<div align="center"> <img src="img/new119.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News118"> Meeting with the fishing sector for the southern hake stock in Vigo (21/02/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News118" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			 Yesterday, part of the Math4Fish team held a meeting with the fishing sector for the southern hake stock in Vigo. 
+			 For us, constructive dialogue is the basis for effective collaboration. 
+            <a href="https://math4fish.ieo.csic.es/"> Go to the Math4Fish web for more information.</a></p> 			 
+<div align="center"> <img src="img/new118.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News117"> Talk by Marta Cousido in Iberian Research in Statistical Ecology (IRSE) (16/02/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News117" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			 Yesterday, our colleague Marta Cousido,
+			 gave a talk on surplus production models at the Iberian Research in Statistical Ecology (IRSE).
+            <a href="https://groups.google.com/g/iberian-research-in-statistical-ecology-irse/c/pZlaYMUODeE"> Go to the IRSE web for more information.</a></p> 			 
+<div align="center"> <img src="img/new117.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
             <a data-toggle="collapse" class="collapsed" href="#News116"> Interview with our colleague Marta Cousido for RTVE (15/02/2023)   <i class="ion-android-remove"></i></a>
             <div id="News116" class="collapse" data-parent="#News-list"> <p align="justify"> 
 			 Our colleague Marta Cousido led a study that reveals how COVID19 affected fishing activity in Andalusia.
