--- a/proof/proof/grc4.html
+++ b/proof/proof/grc4.html
@@ -53,18 +53,27 @@
 
 The MERVEX group develops 4 lines of research:
 <ul>
-<li> <p align="justify"> <b>1) Assessment of fishery resources</b>.
+<li> <p align="justify"> <b>1) Fishery resource assesment</b>.
 </p>	</li>
 
-<li> <p align="justify"> <b>2) Biology of fishery resources</b>.
+<li> <p align="justify"> <b>2) Fishery resource biology</b>.
 </p>	</li>
 
-<li> <p align="justify"> <b>3) Ecology of living resources</b>.
+<li> <p align="justify"> <b>3) Living resource ecology</b>.
 </p>	</li>
 
 <li> <p align="justify"> <b> 4) Sustainable fisheries and technical measures </b>.
 </p>	</li>
 </ul>
+
+<p align="justify">
+In total, the MERVEX group is made up of 20 members of different categories and specialities, according to which they are distributed in each of the 4 lines of research. 
+The organisation chart below shows the composition of each research line, indicating the coordinator and members. 
+</p>
+
+<p align="center">
+<img src="img/Organigrama.jpg" alt="" height="400px" >
+</p>
 
 <p align="justify">
 In each line the members cover the double facet of advice and research by participating in numerous international groups depending on
@@ -74,120 +83,123 @@ guiding Master and PhD students in collaboration with national and international
 </p>
 
 <p align="justify">
-In total, the MERVEX group is made up of 20 members from different categories and specialities. They are listed and described below:
+Below is a list of the members, grouped by line of research, together with a brief professional description:
 </p>
 	
 <ul>
-<li> <p align="justify"> <b>1) Dr. Santiago Cerviño López (coordinator of the MERVEX group 
+
+<li> <p align="justify"> <b>1) Fishery resource assesment</b>.
+</p>	</li>
+
+<li> <p align="justify"> <b>Dr. Santiago Cerviño López (coordinator of the MERVEX group 
 and of the research line on fisheries resources assessment)</b>: 
 expert in fisheries biology and assessment methods, member of the Advisory Committee (ACOM) of ICES and of the WGBIE and WGSAM Working Groups. 
 He has participated in numerous European projects (FP6 and FP7) as coordinator of Case Studies (BECAUSE, UNCOVER, ECOKNOWS) and WPs (MAREFRAME), 
 he is PI of the National Plan project (IMPRESS).
 </p>	</li>
 
-<li> <p align="justify"> <b>2) Dr. Paz Sampedro Pastor</b>: 
+<li> <p align="justify"> <b>Dr. Paz Sampedro Pastor</b>: 
 expert in demersal stock assessment and commercial crustacean biology. 
 She is a member of different ICES assessment working groups and is a member of the STECF and chair of the Expert Group on Technical Measures in the Celtic Sea.
 She has participated in numerous national and international projects (16), published in scientific journals (23) and presented numerous communications at national and international conferences.
 </p>	</li>
 
-<li> <p align="justify"> <b>3) Dr. Isabel González Herraiz</b>: 
+<li> <p align="justify"> <b>Dr. Isabel González Herraiz</b>: 
 expert in Norway lobster fisheries and fisheries data analysis. 
 Participates in the ICES WGBIE, 35 projects, 21 publications, 28 conference papers.
 </p>	</li>
 
-<li> <p align="justify"> <b>4) Esther Abad Casas</b>: 
+<li> <p align="justify"> <b>Esther Abad Casas</b>: 
 expert in fisheries research and stock assessment of megrims. Participates in the WGBIE group of ICES, 
 in 35 projects, 20 publications in scientific journals, 56 communications at conferences.
 </p>	</li>
 
 
-<li> <p align="justify"> <b>5) Gersom Costas</b>: 
+<li> <p align="justify"> <b>Gersom Costas</b>: 
 Expert in fisheries research and pelagic stock assessment. He participates in different ICES groups and is chair of WGMEGS, 
 collaborates in several national and international projects, 8 publications in scientific journals.
 </p>	</li>
 
-<li> <p align="justify"> <b>6) Dr. Marta Cousido</b>: 
-Expert in mathematical and statistical modelling. She has published 7 publications in scientific journals, 
-has developed 3 different software packages in R and has participated in numerous scientific conferences.
-</p>	</li>
-
-<li> <p align="justify"> <b>7) Amina Tifoura</b>: 
+<li> <p align="justify"> <b>Amina Tifoura</b>: 
 is a PhD student of the group and is developing his thesis on the effect of the natural mortality parameter M 
 in the assessment of different stocks of commercial interest for Spain.
 </p>	</li>
 
-<li> <p align="justify"> <b>8) Dr. María Rosario Domínguez Petit (coordinator of the fisehry resources biology research line)</b>: 
+<li> <p align="justify"> <b>Dr. Marta Cousido Rocha</b>: 
+Expert in mathematical and statistical modelling. She has published 7 publications in scientific journals, 
+has developed 3 different software packages in R and has participated in numerous scientific conferences.
+</p>	</li>
+
+<li> <p align="justify"> <b>2) Fishery resource biology</b>.
+</p>	</li>
+
+<li> <p align="justify"> <b>Dr. María Rosario Domínguez Petit (coordinator of the fisehry resources biology research line)</b>: 
 expert in reproductive ecology and life history analysis of exploited marine species. 
 She participates in different ICES working groups and is a member of WGWIDE and WGACEGG. 
 She has been coordinator and PI of research projects of the Xunta de Galicia (DETEPRE and ECOPREGA), of technological support contracts with the fishing sector (PARELEP and PARELEP-2). 
 She is president of the Ibero-American network for the sustainable use of fishery resources (INVIPESCA Network).
 </p>	</li>
 
-
-<li> <p align="justify"> <b>9) María del Carmen Sainza Sousa</b>: 
-Expert in the biology (growth, maturity, length-weight ratio, sex ratio, etc.) of demersal stocks (hake, conger eel, red mullet, etc.).
-</p>	</li>
-
-<li> <p align="justify"> <b>10) Dr. María Dolores Garabana Barro</b>: 
+<li> <p align="justify"> <b>Dr. María Dolores Garabana Barro</b>: 
 Expert in reproductive ecology of exploited marine species; member and collaborator of the ICES groups WGMEGS and WGBIOP.
 </p>	</li>
 
-<li> <p align="justify"> <b>11) Dr. María Isabel Riveiro Alarcón</b>: 
+<li> <p align="justify"> <b>María del Carmen Sainza Sousa</b>: 
+Expert in the biology (growth, maturity, length-weight ratio, sex ratio, etc.) of demersal stocks (hake, conger eel, red mullet, etc.).
+</p>	</li>
+
+<li> <p align="justify"> <b>Dr. María Isabel Riveiro Alarcón</b>: 
 Expert in ichthyoplankton ecology and sardine assessment. Participation in 31 research projects, 29 publications. Ichthyoplankton campaign leader.
 </p>	</li>
 
-<li> <p align="justify"> <b>12) Dr. María Grazia Pennino (coordinator of living resources ecology research line)</b>: 
+<li> <p align="justify"> <b>3) Living resource ecology</b>.
+</p>	</li>
+
+<li> <p align="justify"> <b>Dr. María Grazia Pennino (coordinator of living resources ecology research line)</b>: 
 Expert in spatial statistics, participates in the WGBIE and WKLIFE of ICES, collaborates in different national and international projects, PI of a national plan (IMPRESS), 
 110 publications in scientific journals, part of the editorial board of Hydrobiology and Frontiers in Marine Science.
 </p>	</li>
 
-<li> <p align="justify"> <b>13) Dr. Jaime Otero</b>: 
+<li> <p align="justify"> <b>Dr. Jaime Otero Villar</b>: 
 Expert in ecology and statistical modelling, participates in different national and international projects, leads a national plan (Qlock), 
 44 publications in scientific journals.
 </p>	</li>
 
-<li> <p align="justify"> <b>14) Francisco Izquierdo</b>: 
-PhD student of the group, he is developing his doctoral thesis on the introduction of spatial effects in stock assessment models.
+<li> <p align="justify"> <b>Valentín Trujillo Gorbea</b>: 
+Expert in demersal species assessment with responsibilities in ICES assessment groups. Member of the ICES Advisory Committee.
 </p>	</li>
 
-<li> <p align="justify"> <b>15) Davinia Lojo</b>: 
-PhD student of the group in collaboration with CETMAR, 
-is developing his thesis on how to introduce socio-economic factors in the assessment of stocks in Atlantic waters.
-</p>	</li>
-
-<li> <p align="justify"> <b>16) Dr. Pablo Carrera López</b>: 
+<li> <p align="justify"> <b>Dr. Pablo Carrera López</b>: 
 Director of the Oceanographic Centre of Vigo, expert in sardine fisheries, 
 fisheries assessment and the study of pelagic population dynamics using hydroacoustic techniques. 
 He leads different oceanographic campaigns and participates in different ICES groups.
 </p>	</li>
 
-<li> <p align="justify"> <b>17) Valentín Trujillo Gorbea</b>: 
-Expert in demersal species assessment with responsibilities in ICES assessment groups. Member of the ICES Advisory Committee.
+<li> <p align="justify"> <b>Francisco Izquierdo Tarín</b>: 
+PhD student of the group, he is developing his doctoral thesis on the introduction of spatial effects in stock assessment models.
 </p>	</li>
 
-<li> <p align="justify"> <b>18) Valentín Trujillo Gorbea</b>: 
-Expert in demersal species assessment with responsibilities in ICES assessment groups. Member of the ICES Advisory Committee.
+<li> <p align="justify"> <b>Davinia Lojo</b>: 
+PhD student of the group in collaboration with CETMAR, 
+is developing his thesis on how to introduce socio-economic factors in the assessment of stocks in Atlantic waters.
 </p>	</li>
 
+<li> <p align="justify"> <b> 4) Sustainable fisheries and technical measures </b>.
+</p>	</li>
 
-<li> <p align="justify"> <b>19) Julio Valeiras Mota(coordinates the research line on sustainable fisheries and technical measures)</b>: 
+<li> <p align="justify"> <b>Julio Valeiras Mota(coordinates the research line on sustainable fisheries and technical measures)</b>: 
 An expert in biology and technical measures, 
 he participates in and leads national and international projects on marine resources in the Atlantic, Indian, Pacific and Mediterranean Seas. 
 DESCARSEL campaign manager.
 </p>	</li>
 
-<li> <p align="justify"> <b>20) Dr. Eva Velasco</b>: 
-expert in ecology and fisheries biology, participates and leads different national and international projects, as well as dissemination actions.
+<li> <p align="justify"> <b>Dr. Eva Velasco</b>: 
+Expert in ecology and fisheries biology, participates and leads different national and international projects, as well as dissemination actions.
 </p>	</li>
 
-<p align="justify">
-In the organisation chart below you can see how the different members listed above are structured and related to each other.
-</p>
-
-<p align="center">
-<img src="img/Organigrama.jpg" alt="" height="400px" >
-</p>
+<li> <p align="justify"> <b>Nair Vilas Arrondo</b>: 
+Technical Support Staff in the research group "Ecology and Marine Resources" of the Marine Research Institute, expert in genetic techniques.
+</p>	</li>
 
 </ul>
 </p>	
