Update previous news 06/07/2023

--- a/proof/previous news.html
+++ b/proof/previous news.html
@@ -192,7 +192,7 @@
 			   He is also a specialist in the study of the microchemistry of otoliths to analyse migration, dispersal, 
 			   connectivity and return to the river of origin of migratory species, in particular European shads.  
    			 <a href="https://math4fish.ieo.csic.es/equipo/"> More information.</a></p> 
-<div align="center"> <img src="img/new108.JPG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+<div align="center"> <img src="img/new108.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
 
