Commit to emmend failure with Twitter 06/07/2023

--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@ further information of group organization and team composition can be found <a h
 		  <br>
 		  </p>
 		<center> 
-	<a class="twitter-timeline" data-width="400" data-height="1000" data-theme="light" href="https://twitter.com/MERVEXgroup_IEO">Tweets by Mervexgroup_IEO</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>	
+	<a class="twitter-timeline" data-width="400" data-height="1000" data-theme="light" href="https://twitter.com/MERVEXgroup_IEO">Tweets FROM Mervexgroup_IEO</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>	
      </center> 
   </div>
 
