Second update of the page in 2023.

--- a/proof/previous news.html
+++ b/proof/previous news.html
@@ -64,6 +64,110 @@
 		
 
 						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News128"> There's still time to submit your work for the special issue of ICES journal (14/03/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News128" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Tick, tick, tick, tick, the clock is ticking, but there's still time to submit your work for the special issue of ICES journal, come on in!
+			 Deadline: 31 March 2023.
+			 Keep spirits up!
+            <a href="https://static.primary.prod.gcms.the-infra.com/static/site/icesjms/document/Call+for+papers_Advances+and+challenges+in+the+modelling+and+assessment+of+fishery+resources_Final.pdf?node=f75b6e8c3b7ccfa76961&version=1467759:ebc50897f828fb7803ed"> More information.</a></p> 			 
+<div align="center"> <img src="img/new128.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News127"> "Evaluation Methods with Limited Data" course (13-17/03/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News127" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             The e-learning course "Evaluation Methods with Limited Data", coordinated by "Centro de Formación en La Antigua de la Red de Centros de Formación de la Cooperación Española"
+			 and "nstituto Nacional de Investigación y Desarrollo Pesquero, asesor de SSPyA, CFP y la Cancillería Argentina" and taught by Marta Cousido and Santiago Cerviño from IEO Vigo
+             The activity is part of the INVIPESCAFORT project.
+            <a href="https://intercoonecta.aecid.es/programaci%C3%B3n-de-actividades/curso-m-todos-de-evaluaci-n-con-datos-limitados"> More information.</a></p> 			 
+<div align="center"> <img src="img/new127.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News126"> InternationalWomensDay (08/03/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News126" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             The MERVEX group would like to congratulate and support all our women scientists on this International Womens Day 8M2023!			 
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News125"> 2nd meeting of the Scientific Committee of SIMERPEII (06/03/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News125" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             We start the week with:
+			 2nd meeting of the Scientific Committee of SIMERPEII 
+			 with 12 international scientists from various fields contributing knowledge and experience.
+            <a href="https://math4fish.ieo.csic.es/"> Go to the Math4Fish web for more information.</a></p> 			 
+<div align="center"> <img src="img/new125.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News124"> Workshop "Spatial Stock Assessment Simulation Experiment" (06/03/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News124" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             During these days our members Fran Izquierdo, Marta Cousido and Maria Grazia are 
+			 presenting advances in spatial stock assessment models at the Workshop "Spatial Stock Assessment Simulation Experiment", 
+			 organised by the NOAAFisheries. 
+            <a href="https://github.com/aaronmberger-nwfsc/Spatial-Assessment-Modeling-Workshop"> More information.</a></p> 			 
+<div align="center"> <img src="img/new124.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News123"> Meeting with the fishing sector for the anchovy stock (03/03/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News123" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             We set sail!
+             Yesterday we met with the fishing sector for the anchovy stock and moved in terms of:
+             Understanding
+             Communication
+             Empathy
+             Proactivity
+             This sector is key for Math4Fish and creating links with them is a priority. 
+            <a href="https://math4fish.ieo.csic.es/"> Go to the Math4Fish web for more information.</a></p> 			 
+<div align="center"> <img src="img/new123.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News122"> CALL FOR ABSTRACTS open for ICESASC23! (27/02/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News122" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             There's nothing left to send the abstracts! Several MERVEX group 
+			 members are preparing ours to send them and be able to participate in this always interesting Annual Science Conference
+			 of the ICES (Bilbao, 11-14 September 2023).
+            <a href="https://www.ices.dk/events/asc/2023/Pages/Call_for_Abstracts.aspx"> Go to the ICESASC2023 web for more information.</a></p> 			 
+<div align="center"> <img src="img/new122.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News121"> WKLIFE report (27/02/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News121" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Check out the latest and freshly baked WKLIFE report on data limited methods in which our colleagues
+			 Marta Cousido, Maria Grazia and Santiago Cerviño were involved. 
+            <a href="https://ices-library.figshare.com/articles/report/Eleventh_Workshop_on_the_Development_of_Quantitative_Assessment_Methodologies_based_on_LIFE-history_traits_exploitation_characteristics_and_other_relevant_parameters_for_data-limited_stocks_WKLIFE_XI_/22140260"> Go to the ICES web to download the report.</a></p> 			 
+<div align="center"> <img src="img/new121.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News120"> SIMERPEII congress wil take place in El Puerto de Santa María (Cádiz) from 24th to 27th of October (24/02/2023)   <i class="ion-android-remove"></i></a>
+            <div id="News120" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Let's start counting down for SIMERPEII, today we bring out that it will take place in El Puerto de Santa María (Cádiz) from 24th to 27th of October.
+			 Reserve those dates , the members of the MERVEX have already done it! There is still time left, 
+             but we are already looking forward to it and we will be preparing our communications. 
+            <a href="https://math4fish.ieo.csic.es/"> Go to the Math4Fish web for more information.</a></p> 			 
+<div align="center"> <img src="img/new120.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
             <a data-toggle="collapse" class="collapsed" href="#News119"> Special ICES journal issue (21/02/2023)   <i class="ion-android-remove"></i></a>
             <div id="News119" class="collapse" data-parent="#News-list"> <p align="justify"> 
 			 Two of the members of MERVEX, Santiago Cerviño and Maria Grazia are organizers 
