--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
             <div class="box">
               <h4 class="title"><a href="#News">News</a></h4>
 			  <br>
-              <p align="justify"> <a href="#News">Working Group for the Bay of Biscay and the Iberian Waters Ecoregion "WGBIE" (3-11/05/2023) </a>
+              <p align="justify"> <a href="#News"> Announcement of the SIMERPE2 Congress Plenary Speakers (25/07/2023) </a>
 			   <br>
 			    <br>
-			  <img src="img/new133.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+			  <img src="img/new141.png" alt="" style="max-width:100%;width:auto;height:auto;">
 			  </p>
             </div>
           </div>
@@ -1057,6 +1057,97 @@ further information of group organization and team composition can be found <a h
 		
         <ul id="News-list" class="wow fadeInUp">
 
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News141"> Announcement of the SIMERPE2 Congress Plenary Speakers (25/07/2023) <i class="ion-android-remove"></i></a>
+            <div id="News141" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             The coordinator of the MERVEX group, Santiago Cerviño, will be one of the guest speakers at the SIMERPE2 congress. 
+			 Alexandra Silva from the Portuguese IPMA, Andrés Uriarte from AZTI in the Basque Country and Marta Ballesteros from CETMAR in Vigo. 
+			 ​​​​​​<a href="https://math4fish.ieo.csic.es/welcome/"> Go to the SIMERPE2 web for more information.</a></p> 			 
+<div align="center"> <img src="img/new141.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News140"> MERVEX group dissemination video (21/07/2023) <i class="ion-android-remove"></i></a>
+            <div id="News140" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             We would like to announce that we are preparing a video about the MERVEX group in order to make its members and the work they carry out in the MERVEX framework better known. 
+			 This week we started with the recordings at the Oceanographic Centre of Vigo: several members of the group were showing and explaining their lines of work to the documentary maker Rafael Méndez. 
+			 They talked about fisheries biology, modelling and scientific advice.
+			 In the coming weeks there will be more recordings. We will keep you informed of further developments.    ​​​​​​			 
+<div align="center"> <img src="img/new140.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+							 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News139"> Report on Radio Televisión Gallega about Norway lobster oceanographic campaigns (29/06/2023) <i class="ion-android-remove"></i></a>
+            <div id="News139" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Report on Radio Televisión Gallega about the oceanographic campaigns, in which some colleagues are taking part, to monitor the Norway lobster. 
+			 Unfortunately, the bad trend of Norway lobster stocks in Galicia, shown in the last article published by our colleague Isabel Rodríguez, is confirmed. 
+			 You can consult the article in the dissemination section of this page.   ​​​​​​
+            <a href="https://www.g24.gal/-/a-poboacion-de-cigala-segue-baixo-minimos-na-costa-galega"> Go to the RTVG website to see the video. </a></p> 			 
+<div align="center"> <img src="img/new139.PNG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+	
+
+	                                  <li>
+            <a data-toggle="collapse" class="collapsed" href="#News138"> XIX Conferencia Española y VIII Encuentro Iberoamericano de Biometría (CEB-EIB 2023)(27-30/06/2023) <i class="ion-android-remove"></i></a>
+            <div id="News138" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             The congress has been held from 27 to 30 June in Vigo (Spain). Our colleagues Anxo Paz, Marta Cousido and Fran Izquierdo have participated with communications.
+			 ​​​​ You can consult the communications in the dissemination section of the website and the photographs of the congress on the MERVEX group's Twitter account. ​​​​​​
+            <a href="https://mervex-group.github.io/MERVEX/proof/congress.html"> MERVEX Dissemination link. </a></p> 			 
+<div align="center"> <img src="img/new138.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News137"> Working Group for the Bay of Biscay and the Iberian Waters Ecoregion "WGBIE" (3-11/05/2023) <i class="ion-android-remove"></i></a>
+            <div id="News137" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Our colleagues Margarita Rincón and Santiago Cerviño are attending this WK. WGMIXFISH provides information for management advice and options which take into account the consequences of technical interactions in multistock, multigear fisheries.
+​​​​​​​​​​​​​​​​WGMIXFISH holds two meetings: WGMIXFISH-METHODS focuses on further methodological development and documentation​. 
+WGMIXFISH-ADVICE aims to produce ​mixed fishery projections according to tested methodology and relating these to each stock’s single-species advice. ​​​​​​​​​​
+            <a href="https://www.ices.dk/community/groups/Pages/WGMIXFISH-METHODS.aspx"> Go to the ICES page, for more information.</a></p> 			 
+<div align="center"> <img src="img/new137.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News136"> Do you want to present your work at SIMERPE2 (01/06/2023) <i class="ion-android-remove"></i></a>
+            <div id="News136" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             The organising committee has good news for you: the deadline for abstract submission has been extended until 15 June.
+            <a href="https://math4fish.ieo.csic.es/submit-abstracts/"> Go to the SIMERPE2 submission web.</a></p> 			 
+<div align="center"> <img src="img/new136.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News135"> New article "Life-history traits and environment shape small pelagic fish
+demography and responses to fishing and climate across European Atlantic seas" (17/05/2023) <i class="ion-android-remove"></i></a>
+            <div id="News135" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             New article led by our colleague Jaime Otero on the responses of small pelagic fish (SPFs) to fisheries and climate change impacts.
+			 The results of this study highlight the importance of recruitment for the population growth of SPFs 
+			 and illustrate how the contribution of recruitment varies among and within populations
+			 as a function of environmental conditions and life-history traits defining an ordination of SPFs
+			 along a slow-fast continuum with implications for population dynamics and the responses to endogenous and exogenous factors.
+            <a href="https://academic.oup.com/icesjms/article/80/5/1447/7152845?login=true"> Go to the article page, for more information.</a></p> 			 
+<div align="center"> <img src="img/new135.PNG" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
+
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News134"> International Day of Women in Mathematics (12/05/2023) <i class="ion-android-remove"></i></a>
+            <div id="News134" class="collapse" data-parent="#News-list"> <p align="justify"> 
+             Our colleague Marta Cousido took part in a video produced as part of the Math4fish project for the International Women in Mathematics Day. 		 
+            <a href="https://www.youtube.com/watch?v=cRMjbSALtUM"> Go to the Youtube page to watch the video.</a></p> 			 
+<div align="center"> <img src="img/new134.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
 
 						 		<li>
             <a data-toggle="collapse" class="collapsed" href="#News133"> Working Group for the Bay of Biscay and the Iberian Waters Ecoregion "WGBIE" (3-11/05/2023) <i class="ion-android-remove"></i></a>
@@ -1106,124 +1197,16 @@ further information of group organization and team composition can be found <a h
 
 
 						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News129"> Counting down for SIMERPEII congress (24/03/2023)   <i class="ion-android-remove"></i></a>
+            <a data-toggle="collapse" class="collapsed" href="#News129"> Counting down for SIMERPE2 congress (24/03/2023)   <i class="ion-android-remove"></i></a>
             <div id="News129" class="collapse" data-parent="#News-list"> <p align="justify"> 
              7 months
-			 Counting down for SIMERPEII
+			 Counting down for SIMERPE2
 			 24OCT23 save the date!
 			 More information coming soon! Keep an eye!			 
-            <a href="https://math4fish.ieo.csic.es/"> Go to the Math4Fish web for more information.</a></p> 			 
+            <a href="https://math4fish.ieo.csic.es/welcome/"> Go to the SIMERPE2 web for more information.</a></p> 			 
 <div align="center"> <img src="img/new129.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News128"> There's still time to submit your work for the special issue of ICES journal (14/03/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News128" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             Tick, tick, tick, tick, the clock is ticking, but there's still time to submit your work for the special issue of ICES journal, come on in!
-			 Deadline: 31 March 2023.
-			 Keep spirits up!
-            <a href="https://static.primary.prod.gcms.the-infra.com/static/site/icesjms/document/Call+for+papers_Advances+and+challenges+in+the+modelling+and+assessment+of+fishery+resources_Final.pdf?node=f75b6e8c3b7ccfa76961&version=1467759:ebc50897f828fb7803ed"> More information.</a></p> 			 
-<div align="center"> <img src="img/new128.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News127"> "Evaluation Methods with Limited Data" course (13-17/03/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News127" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             The e-learning course "Evaluation Methods with Limited Data", coordinated by "Centro de Formación en La Antigua de la Red de Centros de Formación de la Cooperación Española"
-			 and "nstituto Nacional de Investigación y Desarrollo Pesquero, asesor de SSPyA, CFP y la Cancillería Argentina" and taught by Marta Cousido and Santiago Cerviño from IEO Vigo
-             The activity is part of the INVIPESCAFORT project.
-            <a href="https://intercoonecta.aecid.es/programaci%C3%B3n-de-actividades/curso-m-todos-de-evaluaci-n-con-datos-limitados"> More information.</a></p> 			 
-<div align="center"> <img src="img/new127.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News126"> InternationalWomensDay (08/03/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News126" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             The MERVEX group would like to congratulate and support all our women scientists on this International Womens Day 8M2023!			 
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News125"> 2nd meeting of the Scientific Committee of SIMERPEII (06/03/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News125" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             We start the week with:
-			 2nd meeting of the Scientific Committee of SIMERPEII 
-			 with 12 international scientists from various fields contributing knowledge and experience.
-            <a href="https://math4fish.ieo.csic.es/"> Go to the Math4Fish web for more information.</a></p> 			 
-<div align="center"> <img src="img/new125.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News124"> Workshop "Spatial Stock Assessment Simulation Experiment" (06/03/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News124" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             During these days our members Fran Izquierdo, Marta Cousido and Maria Grazia are 
-			 presenting advances in spatial stock assessment models at the Workshop "Spatial Stock Assessment Simulation Experiment", 
-			 organised by the NOAAFisheries. 
-            <a href="https://github.com/aaronmberger-nwfsc/Spatial-Assessment-Modeling-Workshop"> More information.</a></p> 			 
-<div align="center"> <img src="img/new124.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News123"> Meeting with the fishing sector for the anchovy stock (03/03/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News123" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             We set sail!
-             Yesterday we met with the fishing sector for the anchovy stock and moved in terms of:
-             Understanding
-             Communication
-             Empathy
-             Proactivity
-             This sector is key for Math4Fish and creating links with them is a priority. 
-            <a href="https://math4fish.ieo.csic.es/"> Go to the Math4Fish web for more information.</a></p> 			 
-<div align="center"> <img src="img/new123.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News122"> CALL FOR ABSTRACTS open for ICESASC23! (27/02/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News122" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             There's nothing left to send the abstracts! Several MERVEX group 
-			 members are preparing ours to send them and be able to participate in this always interesting Annual Science Conference
-			 of the ICES (Bilbao, 11-14 September 2023).
-            <a href="https://www.ices.dk/events/asc/2023/Pages/Call_for_Abstracts.aspx"> Go to the ICESASC2023 web for more information.</a></p> 			 
-<div align="center"> <img src="img/new122.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News121"> WKLIFE report (27/02/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News121" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             Check out the latest and freshly baked WKLIFE report on data limited methods in which our colleagues
-			 Marta Cousido, Maria Grazia and Santiago Cerviño were involved. 
-            <a href="https://ices-library.figshare.com/articles/report/Eleventh_Workshop_on_the_Development_of_Quantitative_Assessment_Methodologies_based_on_LIFE-history_traits_exploitation_characteristics_and_other_relevant_parameters_for_data-limited_stocks_WKLIFE_XI_/22140260"> Go to the ICES web to download the report.</a></p> 			 
-<div align="center"> <img src="img/new121.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
-
-						 		<li>
-            <a data-toggle="collapse" class="collapsed" href="#News120"> SIMERPEII congress wil take place in El Puerto de Santa María (Cádiz) from 24th to 27th of October (24/02/2023)   <i class="ion-android-remove"></i></a>
-            <div id="News120" class="collapse" data-parent="#News-list"> <p align="justify"> 
-             Let's start counting down for SIMERPEII, today we bring out that it will take place in El Puerto de Santa María (Cádiz) from 24th to 27th of October.
-			 Reserve those dates , the members of the MERVEX have already done it! There is still time left, 
-             but we are already looking forward to it and we will be preparing our communications. 
-            <a href="https://math4fish.ieo.csic.es/"> Go to the Math4Fish web for more information.</a></p> 			 
-<div align="center"> <img src="img/new120.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
-            </div>
-         </li>
-
 		 
 		 <li>
 		  
@@ -1243,9 +1226,9 @@ further information of group organization and team composition can be found <a h
       <div class="container">
 
         <header class="section-header">
-          <h3>Iberian Symposium on Modeling and Assessment of Fishery Resources (SIMERPE; from "Simposio Ibérico de Modelado y Evaluación de Recursos Pesqueros")</h3>
+          <h3> SIMERPE 2: Second Iberian Symposium on Modeling and Assessment of Fishery Resources </h3>
 		  <h3> The <b>SYMPOSIUM</b> will take place on October 24-27, 2023 on IEO (Cádiz, Spain).
-		  <p align="center"> FUNDED by Math4Fish (go to the <a href="https://math4fish.ieo.csic.es/">website.</a>)</p>
+		  <p align="center"> FUNDED by Math4Fish (go to the <a href="https://math4fish.ieo.csic.es/welcome/">website.</a>)</p>
 		  </header>
       </div>
 	</section>
